# rust_rocket_server_example

./: .env  Cargo.toml  Rocket.toml
migrations/2021-07-17-080610_users/: up.sql
migrations/2021-07-17-080620_social_accounts/: down.sql  up.sql
migrations/2021-07-17-081313_posts/: up.sql
migrations/2021-07-17-081448_comments/: up.sql
migrations/2021-07-17-081634_likes/: up.sql
src/: main.rs  schema.rs
src/app/: mod.rs
src/db/: mod.rs
src/models/: comment.rs  like.rs  mod.rs  post.rs  social_account.rs  user.rs
src/route/: auth.rs
src/util/: error.rs  google.rs
