[package]
name = "server"
version = "0.1.0"
authors = ["heechan <ryanhe4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
chrono = { version = "0.4.9" , features = ["serde"] }
diesel = { version = "1.4.7", features = ["mysql", "chrono", "r2d2", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.5.13"
log = "0.4.6"
serde = "^1.0"
serde_json = "^1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_mysql_pool"]